syntax = "proto3";
package token;
option go_package = "github.com/JanMeckelholt/running/grpc/token";
import "google/protobuf/empty.proto";

service Token {
  rpc UpsertClient(Client) returns (google.protobuf.Empty) {}
  rpc GetClient(ClientId) returns (Client) {}
}

message ClientId {
  string clientId =1;
}

message Client {
  string clientId = 1;
  string clientSecret = 2;
  string token = 3;
  string refreshToken = 4;
}

message TokenResponse {
  oneof response {
    SuccessResponse success_response = 1;
    ErrorResponse error_response = 2;
  }
}

message SuccessResponse {
  string message =1;
}
message ErrorResponse {
  string error = 1;
}